[package]
name = "scan-classification"
version = "0.1.0"
authors = ["Connor Skees <connor1skees@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glutin = "0.26.0"
nalgebra = "0.24.1"
nalgebra-glm = "0.10.0"
rpng = { git = "https://github.com/connorskees/rpng" }
stl = { git = "https://github.com/connorskees/stl" }